# safetensors-cli

./: .gitignore  Cargo.toml
python/: .rtx.toml  create_files.py  requirements.txt
src/: main.rs
