[package]
name = "safetensors-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gzsombor/safetensors-cli"
keywords = ["safetensors", "file-formats"]
description = "Command line tool to inspect files in safetensors format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.82"
safetensors = "0.6.0"
clap = { version = "4.5.4", features = ["derive"]}
memmap2 = "0.9.4"
zip = "6.0.0"
serde-pickle = { git = "https://github.com/gzsombor/serde-pickle.git", branch="master" }

